# SystemC-Quickstart

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  conanfile.txt  main.cpp  requirements.txt
Examples/Factorial/: factorial_calculator.h  testbench.cpp
cmake/: Conan.cmake  FindSystemC.cmake
